Addressed comments and sonarcube warnings